--- a/frontend/blog/src/app/posts/post-list/post-list.component.html
+++ b/frontend/blog/src/app/posts/post-list/post-list.component.html
@@ -1,3 +1,7 @@
-<p>
-  post-list works!
-</p>
+<ul class="post-list">
+  <li
+    class="post-list__item"
+    app-post-item *ngFor="let post of posts"
+    [post]="post"
+  ></li>
+</ul>
