--- a/frontend/blog/src/app/posts/post-item/post-item.component.html
+++ b/frontend/blog/src/app/posts/post-item/post-item.component.html
@@ -1,3 +1,5 @@
-<p>
-  post-item works!
-</p>
+<div>
+  <img src="{{post.photo_url}}"/>
+  <p *ngIf="post.published_date">{{post.published_date}}</p>
+  <p>{{post.title}}</p>
+</div>
